// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox screenshot checked 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.checkbox-radio-base {
    --checkbox-radio-base-border-width: 1px;
    --checkbox-radio-base-icon-checked-bg: var(--clr-el-yellow-100);
}

    .checkbox-radio-base_size_s8 {
            --checkbox-radio-base-rectangle-size: 8px;
            --checkbox-radio-base-circle-tick-size: 2px;
            --checkbox-radio-base-rectangle-border-raduis: 2px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s12 {
            --checkbox-radio-base-rectangle-size: 12px;
            --checkbox-radio-base-circle-tick-size: 4px;
            --checkbox-radio-base-rectangle-border-raduis: 4px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s16 {
            --checkbox-radio-base-rectangle-size: 16px;
            --checkbox-radio-base-circle-tick-size: 6px;
            --checkbox-radio-base-rectangle-border-raduis: 5px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s20 {
            --checkbox-radio-base-rectangle-size: 20px;
            --checkbox-radio-base-circle-tick-size: 6px;
            --checkbox-radio-base-rectangle-border-raduis: 5px;
            --checkbox-radio-base-font-size: 16px;
            --checkbox-radio-base-line-height: 24px;
        }

    .checkbox-radio-base_size_s24 {
            --checkbox-radio-base-rectangle-size: 24px;
            --checkbox-radio-base-circle-tick-size: 8px;
            --checkbox-radio-base-rectangle-border-raduis: 7px;
            --checkbox-radio-base-font-size: 16px;
            --checkbox-radio-base-line-height: 24px;
        }

    .checkbox-radio-base_shape_rectangle {
            --checkbox-radio-base-transform-check: translateY(-50%);
            --checkbox-radio-base-icon-border-radius: var(--checkbox-radio-base-rectangle-border-raduis);
            --checkbox-radio-base-tick-size: auto;
            --checkbox-radio-base-icon-transition-duration-border: 0.1s;
            --checkbox-radio-base-icon-transition-duration-bg: 0.1s;
            --checkbox-radio-base-icon-checked-bg-hover: var(--clr-el-yellow-200);
        }

    .checkbox-radio-base_shape_circle {
            --checkbox-radio-base-icon-border-radius: 50%;
            --checkbox-radio-base-transform-check: none;
            --checkbox-radio-base-tick-size: var(--checkbox-radio-base-circle-tick-size);
            --checkbox-radio-base-icon-transition-duration-border: 0.1s;
            --checkbox-radio-base-icon-transition-duration-bg: 0.2s;
            --checkbox-radio-base-icon-checked-bg-hover: var(--checkbox-radio-base-icon-checked-bg);
        }

    .checkbox-radio-base {

    display: flex;
    align-items: center;

    color: var(--clr-el-gray-080);
    font-size: var(--checkbox-radio-base-font-size);
    line-height: var(--checkbox-radio-base-line-height);

    cursor: pointer;
    user-select: none;
}

    .checkbox-radio-base_disabled {
        color: var(--clr-el-gray-050);
        cursor: default;
    }

    .checkbox-radio-base__input {
        position: absolute;
        opacity: 0;

        width: 0;
        height: 0;
    }

    .checkbox-radio-base__input:focus-visible ~ .checkbox-radio-base__icon:before {
        box-shadow: var(--shdw-el-focused);
    }

    .checkbox-radio-base__icon {
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;

        color: var(--clr-el-gray-080);

        width: var(--checkbox-radio-base-rectangle-size);
        height: var(--checkbox-radio-base-rectangle-size);

        z-index: 1;
    }

    .checkbox-radio-base__icon:before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;

            border: var(--checkbox-radio-base-border-width) solid var(--clr-el-gray-030);
            box-sizing: border-box;
            border-radius: var(--checkbox-radio-base-icon-border-radius);

            z-index: -1;

            transition: border-color var(--checkbox-radio-base-icon-transition-duration-border) ease-out,
                background-color var(--checkbox-radio-base-icon-transition-duration-bg) ease-out;
        }

    .checkbox-radio-base_checked .checkbox-radio-base__icon:before {
        background-color: var(--clr-el-yellow-100);
        border-width: 0;
    }

    .checkbox-radio-base:hover.checkbox-radio-base:not(.checkbox-radio-base_checked) .checkbox-radio-base__icon:before {
        border-color: var(--clr-el-gray-040);
    }

    .checkbox-radio-base:hover.checkbox-radio-base:is(.checkbox-radio-base_checked):not(.checkbox-radio-base_disabled) .checkbox-radio-base__icon:before {
        background-color: var(--checkbox-radio-base-icon-checked-bg-hover);
    }

    .checkbox-radio-base_disabled .checkbox-radio-base__icon {
        color: var(--clr-el-gray-040);
    }

    .checkbox-radio-base_disabled .checkbox-radio-base__icon:before {
        background-color: var(--clr-el-gray-020);
    }

    .checkbox-radio-base__tick {
        display: flex;
        align-items: center;
        justify-content: center;

        width: var(--checkbox-radio-base-tick-size);
        height: var(--checkbox-radio-base-tick-size);

        opacity: 0;
        transform: var(--checkbox-radio-base-transform-check);
        transition: transform 0.2s;
    }

    .checkbox-radio-base_checked .checkbox-radio-base__tick {
        opacity: 1;
        transform: none;
    }

    .checkbox-radio-base__label {
        margin-left: var(--space-8);
        flex: 1;
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">isChecked: true</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s20 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"12\\" fill=\\"currentColor\\" height=\\"9\\" viewBox=\\"0 0 12 9\\"><path d=\\"M4.61542 6.39099L1.55542 3.08599C1.39357 2.91216 1.16956 2.80935 0.932223 2.79998C0.694888 2.79062 0.463473 2.87545 0.288423 3.03599C0.202076 3.11519 0.132216 3.21065 0.0828515 3.31691C0.0334866 3.42317 0.00558826 3.53813 0.000756993 3.65519C-0.00407428 3.77226 0.0142566 3.88912 0.054698 3.99909C0.0951395 4.10905 0.156895 4.20995 0.236423 4.29599L4.59142 8.99999L11.7524 1.50699C11.8333 1.42237 11.8967 1.32261 11.939 1.21343C11.9813 1.10426 12.0017 0.987812 11.9989 0.870766C11.9961 0.753719 11.9702 0.638372 11.9228 0.531334C11.8754 0.424296 11.8073 0.327669 11.7224 0.246991C11.55 0.0830431 11.3196 -0.00586022 11.0817 -0.000236868C10.8439 0.00538648 10.6179 0.105078 10.4534 0.276991L4.61542 6.39099Z\\" fill=\\"currentColor\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">isChecked: false</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s20 checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"12\\" fill=\\"currentColor\\" height=\\"9\\" viewBox=\\"0 0 12 9\\"><path d=\\"M4.61542 6.39099L1.55542 3.08599C1.39357 2.91216 1.16956 2.80935 0.932223 2.79998C0.694888 2.79062 0.463473 2.87545 0.288423 3.03599C0.202076 3.11519 0.132216 3.21065 0.0828515 3.31691C0.0334866 3.42317 0.00558826 3.53813 0.000756993 3.65519C-0.00407428 3.77226 0.0142566 3.88912 0.054698 3.99909C0.0951395 4.10905 0.156895 4.20995 0.236423 4.29599L4.59142 8.99999L11.7524 1.50699C11.8333 1.42237 11.8967 1.32261 11.939 1.21343C11.9813 1.10426 12.0017 0.987812 11.9989 0.870766C11.9961 0.753719 11.9702 0.638372 11.9228 0.531334C11.8754 0.424296 11.8073 0.327669 11.7224 0.246991C11.55 0.0830431 11.3196 -0.00586022 11.0817 -0.000236868C10.8439 0.00538648 10.6179 0.105078 10.4534 0.276991L4.61542 6.39099Z\\" fill=\\"currentColor\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div></div></div></div>"
`;

exports[`Checkbox screenshot disabled 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.checkbox-radio-base {
    --checkbox-radio-base-border-width: 1px;
    --checkbox-radio-base-icon-checked-bg: var(--clr-el-yellow-100);
}

    .checkbox-radio-base_size_s8 {
            --checkbox-radio-base-rectangle-size: 8px;
            --checkbox-radio-base-circle-tick-size: 2px;
            --checkbox-radio-base-rectangle-border-raduis: 2px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s12 {
            --checkbox-radio-base-rectangle-size: 12px;
            --checkbox-radio-base-circle-tick-size: 4px;
            --checkbox-radio-base-rectangle-border-raduis: 4px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s16 {
            --checkbox-radio-base-rectangle-size: 16px;
            --checkbox-radio-base-circle-tick-size: 6px;
            --checkbox-radio-base-rectangle-border-raduis: 5px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s20 {
            --checkbox-radio-base-rectangle-size: 20px;
            --checkbox-radio-base-circle-tick-size: 6px;
            --checkbox-radio-base-rectangle-border-raduis: 5px;
            --checkbox-radio-base-font-size: 16px;
            --checkbox-radio-base-line-height: 24px;
        }

    .checkbox-radio-base_size_s24 {
            --checkbox-radio-base-rectangle-size: 24px;
            --checkbox-radio-base-circle-tick-size: 8px;
            --checkbox-radio-base-rectangle-border-raduis: 7px;
            --checkbox-radio-base-font-size: 16px;
            --checkbox-radio-base-line-height: 24px;
        }

    .checkbox-radio-base_shape_rectangle {
            --checkbox-radio-base-transform-check: translateY(-50%);
            --checkbox-radio-base-icon-border-radius: var(--checkbox-radio-base-rectangle-border-raduis);
            --checkbox-radio-base-tick-size: auto;
            --checkbox-radio-base-icon-transition-duration-border: 0.1s;
            --checkbox-radio-base-icon-transition-duration-bg: 0.1s;
            --checkbox-radio-base-icon-checked-bg-hover: var(--clr-el-yellow-200);
        }

    .checkbox-radio-base_shape_circle {
            --checkbox-radio-base-icon-border-radius: 50%;
            --checkbox-radio-base-transform-check: none;
            --checkbox-radio-base-tick-size: var(--checkbox-radio-base-circle-tick-size);
            --checkbox-radio-base-icon-transition-duration-border: 0.1s;
            --checkbox-radio-base-icon-transition-duration-bg: 0.2s;
            --checkbox-radio-base-icon-checked-bg-hover: var(--checkbox-radio-base-icon-checked-bg);
        }

    .checkbox-radio-base {

    display: flex;
    align-items: center;

    color: var(--clr-el-gray-080);
    font-size: var(--checkbox-radio-base-font-size);
    line-height: var(--checkbox-radio-base-line-height);

    cursor: pointer;
    user-select: none;
}

    .checkbox-radio-base_disabled {
        color: var(--clr-el-gray-050);
        cursor: default;
    }

    .checkbox-radio-base__input {
        position: absolute;
        opacity: 0;

        width: 0;
        height: 0;
    }

    .checkbox-radio-base__input:focus-visible ~ .checkbox-radio-base__icon:before {
        box-shadow: var(--shdw-el-focused);
    }

    .checkbox-radio-base__icon {
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;

        color: var(--clr-el-gray-080);

        width: var(--checkbox-radio-base-rectangle-size);
        height: var(--checkbox-radio-base-rectangle-size);

        z-index: 1;
    }

    .checkbox-radio-base__icon:before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;

            border: var(--checkbox-radio-base-border-width) solid var(--clr-el-gray-030);
            box-sizing: border-box;
            border-radius: var(--checkbox-radio-base-icon-border-radius);

            z-index: -1;

            transition: border-color var(--checkbox-radio-base-icon-transition-duration-border) ease-out,
                background-color var(--checkbox-radio-base-icon-transition-duration-bg) ease-out;
        }

    .checkbox-radio-base_checked .checkbox-radio-base__icon:before {
        background-color: var(--clr-el-yellow-100);
        border-width: 0;
    }

    .checkbox-radio-base:hover.checkbox-radio-base:not(.checkbox-radio-base_checked) .checkbox-radio-base__icon:before {
        border-color: var(--clr-el-gray-040);
    }

    .checkbox-radio-base:hover.checkbox-radio-base:is(.checkbox-radio-base_checked):not(.checkbox-radio-base_disabled) .checkbox-radio-base__icon:before {
        background-color: var(--checkbox-radio-base-icon-checked-bg-hover);
    }

    .checkbox-radio-base_disabled .checkbox-radio-base__icon {
        color: var(--clr-el-gray-040);
    }

    .checkbox-radio-base_disabled .checkbox-radio-base__icon:before {
        background-color: var(--clr-el-gray-020);
    }

    .checkbox-radio-base__tick {
        display: flex;
        align-items: center;
        justify-content: center;

        width: var(--checkbox-radio-base-tick-size);
        height: var(--checkbox-radio-base-tick-size);

        opacity: 0;
        transform: var(--checkbox-radio-base-transform-check);
        transition: transform 0.2s;
    }

    .checkbox-radio-base_checked .checkbox-radio-base__tick {
        opacity: 1;
        transform: none;
    }

    .checkbox-radio-base__label {
        margin-left: var(--space-8);
        flex: 1;
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">isDisabled: true</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s20 checkbox-radio-base_disabled checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\" disabled=\\"\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"12\\" fill=\\"currentColor\\" height=\\"9\\" viewBox=\\"0 0 12 9\\"><path d=\\"M4.61542 6.39099L1.55542 3.08599C1.39357 2.91216 1.16956 2.80935 0.932223 2.79998C0.694888 2.79062 0.463473 2.87545 0.288423 3.03599C0.202076 3.11519 0.132216 3.21065 0.0828515 3.31691C0.0334866 3.42317 0.00558826 3.53813 0.000756993 3.65519C-0.00407428 3.77226 0.0142566 3.88912 0.054698 3.99909C0.0951395 4.10905 0.156895 4.20995 0.236423 4.29599L4.59142 8.99999L11.7524 1.50699C11.8333 1.42237 11.8967 1.32261 11.939 1.21343C11.9813 1.10426 12.0017 0.987812 11.9989 0.870766C11.9961 0.753719 11.9702 0.638372 11.9228 0.531334C11.8754 0.424296 11.8073 0.327669 11.7224 0.246991C11.55 0.0830431 11.3196 -0.00586022 11.0817 -0.000236868C10.8439 0.00538648 10.6179 0.105078 10.4534 0.276991L4.61542 6.39099Z\\" fill=\\"currentColor\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">isDisabled: false</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s20 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"12\\" fill=\\"currentColor\\" height=\\"9\\" viewBox=\\"0 0 12 9\\"><path d=\\"M4.61542 6.39099L1.55542 3.08599C1.39357 2.91216 1.16956 2.80935 0.932223 2.79998C0.694888 2.79062 0.463473 2.87545 0.288423 3.03599C0.202076 3.11519 0.132216 3.21065 0.0828515 3.31691C0.0334866 3.42317 0.00558826 3.53813 0.000756993 3.65519C-0.00407428 3.77226 0.0142566 3.88912 0.054698 3.99909C0.0951395 4.10905 0.156895 4.20995 0.236423 4.29599L4.59142 8.99999L11.7524 1.50699C11.8333 1.42237 11.8967 1.32261 11.939 1.21343C11.9813 1.10426 12.0017 0.987812 11.9989 0.870766C11.9961 0.753719 11.9702 0.638372 11.9228 0.531334C11.8754 0.424296 11.8073 0.327669 11.7224 0.246991C11.55 0.0830431 11.3196 -0.00586022 11.0817 -0.000236868C10.8439 0.00538648 10.6179 0.105078 10.4534 0.276991L4.61542 6.39099Z\\" fill=\\"currentColor\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div></div></div></div>"
`;

exports[`Checkbox screenshot mode 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.checkbox-radio-base {
    --checkbox-radio-base-border-width: 1px;
    --checkbox-radio-base-icon-checked-bg: var(--clr-el-yellow-100);
}

    .checkbox-radio-base_size_s8 {
            --checkbox-radio-base-rectangle-size: 8px;
            --checkbox-radio-base-circle-tick-size: 2px;
            --checkbox-radio-base-rectangle-border-raduis: 2px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s12 {
            --checkbox-radio-base-rectangle-size: 12px;
            --checkbox-radio-base-circle-tick-size: 4px;
            --checkbox-radio-base-rectangle-border-raduis: 4px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s16 {
            --checkbox-radio-base-rectangle-size: 16px;
            --checkbox-radio-base-circle-tick-size: 6px;
            --checkbox-radio-base-rectangle-border-raduis: 5px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s20 {
            --checkbox-radio-base-rectangle-size: 20px;
            --checkbox-radio-base-circle-tick-size: 6px;
            --checkbox-radio-base-rectangle-border-raduis: 5px;
            --checkbox-radio-base-font-size: 16px;
            --checkbox-radio-base-line-height: 24px;
        }

    .checkbox-radio-base_size_s24 {
            --checkbox-radio-base-rectangle-size: 24px;
            --checkbox-radio-base-circle-tick-size: 8px;
            --checkbox-radio-base-rectangle-border-raduis: 7px;
            --checkbox-radio-base-font-size: 16px;
            --checkbox-radio-base-line-height: 24px;
        }

    .checkbox-radio-base_shape_rectangle {
            --checkbox-radio-base-transform-check: translateY(-50%);
            --checkbox-radio-base-icon-border-radius: var(--checkbox-radio-base-rectangle-border-raduis);
            --checkbox-radio-base-tick-size: auto;
            --checkbox-radio-base-icon-transition-duration-border: 0.1s;
            --checkbox-radio-base-icon-transition-duration-bg: 0.1s;
            --checkbox-radio-base-icon-checked-bg-hover: var(--clr-el-yellow-200);
        }

    .checkbox-radio-base_shape_circle {
            --checkbox-radio-base-icon-border-radius: 50%;
            --checkbox-radio-base-transform-check: none;
            --checkbox-radio-base-tick-size: var(--checkbox-radio-base-circle-tick-size);
            --checkbox-radio-base-icon-transition-duration-border: 0.1s;
            --checkbox-radio-base-icon-transition-duration-bg: 0.2s;
            --checkbox-radio-base-icon-checked-bg-hover: var(--checkbox-radio-base-icon-checked-bg);
        }

    .checkbox-radio-base {

    display: flex;
    align-items: center;

    color: var(--clr-el-gray-080);
    font-size: var(--checkbox-radio-base-font-size);
    line-height: var(--checkbox-radio-base-line-height);

    cursor: pointer;
    user-select: none;
}

    .checkbox-radio-base_disabled {
        color: var(--clr-el-gray-050);
        cursor: default;
    }

    .checkbox-radio-base__input {
        position: absolute;
        opacity: 0;

        width: 0;
        height: 0;
    }

    .checkbox-radio-base__input:focus-visible ~ .checkbox-radio-base__icon:before {
        box-shadow: var(--shdw-el-focused);
    }

    .checkbox-radio-base__icon {
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;

        color: var(--clr-el-gray-080);

        width: var(--checkbox-radio-base-rectangle-size);
        height: var(--checkbox-radio-base-rectangle-size);

        z-index: 1;
    }

    .checkbox-radio-base__icon:before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;

            border: var(--checkbox-radio-base-border-width) solid var(--clr-el-gray-030);
            box-sizing: border-box;
            border-radius: var(--checkbox-radio-base-icon-border-radius);

            z-index: -1;

            transition: border-color var(--checkbox-radio-base-icon-transition-duration-border) ease-out,
                background-color var(--checkbox-radio-base-icon-transition-duration-bg) ease-out;
        }

    .checkbox-radio-base_checked .checkbox-radio-base__icon:before {
        background-color: var(--clr-el-yellow-100);
        border-width: 0;
    }

    .checkbox-radio-base:hover.checkbox-radio-base:not(.checkbox-radio-base_checked) .checkbox-radio-base__icon:before {
        border-color: var(--clr-el-gray-040);
    }

    .checkbox-radio-base:hover.checkbox-radio-base:is(.checkbox-radio-base_checked):not(.checkbox-radio-base_disabled) .checkbox-radio-base__icon:before {
        background-color: var(--checkbox-radio-base-icon-checked-bg-hover);
    }

    .checkbox-radio-base_disabled .checkbox-radio-base__icon {
        color: var(--clr-el-gray-040);
    }

    .checkbox-radio-base_disabled .checkbox-radio-base__icon:before {
        background-color: var(--clr-el-gray-020);
    }

    .checkbox-radio-base__tick {
        display: flex;
        align-items: center;
        justify-content: center;

        width: var(--checkbox-radio-base-tick-size);
        height: var(--checkbox-radio-base-tick-size);

        opacity: 0;
        transform: var(--checkbox-radio-base-transform-check);
        transition: transform 0.2s;
    }

    .checkbox-radio-base_checked .checkbox-radio-base__tick {
        opacity: 1;
        transform: none;
    }

    .checkbox-radio-base__label {
        margin-left: var(--space-8);
        flex: 1;
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">mode: checked</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s20 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"12\\" fill=\\"currentColor\\" height=\\"9\\" viewBox=\\"0 0 12 9\\"><path d=\\"M4.61542 6.39099L1.55542 3.08599C1.39357 2.91216 1.16956 2.80935 0.932223 2.79998C0.694888 2.79062 0.463473 2.87545 0.288423 3.03599C0.202076 3.11519 0.132216 3.21065 0.0828515 3.31691C0.0334866 3.42317 0.00558826 3.53813 0.000756993 3.65519C-0.00407428 3.77226 0.0142566 3.88912 0.054698 3.99909C0.0951395 4.10905 0.156895 4.20995 0.236423 4.29599L4.59142 8.99999L11.7524 1.50699C11.8333 1.42237 11.8967 1.32261 11.939 1.21343C11.9813 1.10426 12.0017 0.987812 11.9989 0.870766C11.9961 0.753719 11.9702 0.638372 11.9228 0.531334C11.8754 0.424296 11.8073 0.327669 11.7224 0.246991C11.55 0.0830431 11.3196 -0.00586022 11.0817 -0.000236868C10.8439 0.00538648 10.6179 0.105078 10.4534 0.276991L4.61542 6.39099Z\\" fill=\\"currentColor\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">mode: expanded</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s20 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"10\\" fill=\\"currentColor\\" height=\\"2\\" viewBox=\\"0 0 10 2\\"><rect width=\\"10\\" height=\\"2\\" rx=\\"1\\" fill=\\"currentColor\\"></rect></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div></div></div></div>"
`;

exports[`Checkbox screenshot size 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.checkbox-radio-base {
    --checkbox-radio-base-border-width: 1px;
    --checkbox-radio-base-icon-checked-bg: var(--clr-el-yellow-100);
}

    .checkbox-radio-base_size_s8 {
            --checkbox-radio-base-rectangle-size: 8px;
            --checkbox-radio-base-circle-tick-size: 2px;
            --checkbox-radio-base-rectangle-border-raduis: 2px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s12 {
            --checkbox-radio-base-rectangle-size: 12px;
            --checkbox-radio-base-circle-tick-size: 4px;
            --checkbox-radio-base-rectangle-border-raduis: 4px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s16 {
            --checkbox-radio-base-rectangle-size: 16px;
            --checkbox-radio-base-circle-tick-size: 6px;
            --checkbox-radio-base-rectangle-border-raduis: 5px;
            --checkbox-radio-base-font-size: 12px;
            --checkbox-radio-base-line-height: 16px;
        }

    .checkbox-radio-base_size_s20 {
            --checkbox-radio-base-rectangle-size: 20px;
            --checkbox-radio-base-circle-tick-size: 6px;
            --checkbox-radio-base-rectangle-border-raduis: 5px;
            --checkbox-radio-base-font-size: 16px;
            --checkbox-radio-base-line-height: 24px;
        }

    .checkbox-radio-base_size_s24 {
            --checkbox-radio-base-rectangle-size: 24px;
            --checkbox-radio-base-circle-tick-size: 8px;
            --checkbox-radio-base-rectangle-border-raduis: 7px;
            --checkbox-radio-base-font-size: 16px;
            --checkbox-radio-base-line-height: 24px;
        }

    .checkbox-radio-base_shape_rectangle {
            --checkbox-radio-base-transform-check: translateY(-50%);
            --checkbox-radio-base-icon-border-radius: var(--checkbox-radio-base-rectangle-border-raduis);
            --checkbox-radio-base-tick-size: auto;
            --checkbox-radio-base-icon-transition-duration-border: 0.1s;
            --checkbox-radio-base-icon-transition-duration-bg: 0.1s;
            --checkbox-radio-base-icon-checked-bg-hover: var(--clr-el-yellow-200);
        }

    .checkbox-radio-base_shape_circle {
            --checkbox-radio-base-icon-border-radius: 50%;
            --checkbox-radio-base-transform-check: none;
            --checkbox-radio-base-tick-size: var(--checkbox-radio-base-circle-tick-size);
            --checkbox-radio-base-icon-transition-duration-border: 0.1s;
            --checkbox-radio-base-icon-transition-duration-bg: 0.2s;
            --checkbox-radio-base-icon-checked-bg-hover: var(--checkbox-radio-base-icon-checked-bg);
        }

    .checkbox-radio-base {

    display: flex;
    align-items: center;

    color: var(--clr-el-gray-080);
    font-size: var(--checkbox-radio-base-font-size);
    line-height: var(--checkbox-radio-base-line-height);

    cursor: pointer;
    user-select: none;
}

    .checkbox-radio-base_disabled {
        color: var(--clr-el-gray-050);
        cursor: default;
    }

    .checkbox-radio-base__input {
        position: absolute;
        opacity: 0;

        width: 0;
        height: 0;
    }

    .checkbox-radio-base__input:focus-visible ~ .checkbox-radio-base__icon:before {
        box-shadow: var(--shdw-el-focused);
    }

    .checkbox-radio-base__icon {
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;

        color: var(--clr-el-gray-080);

        width: var(--checkbox-radio-base-rectangle-size);
        height: var(--checkbox-radio-base-rectangle-size);

        z-index: 1;
    }

    .checkbox-radio-base__icon:before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;

            border: var(--checkbox-radio-base-border-width) solid var(--clr-el-gray-030);
            box-sizing: border-box;
            border-radius: var(--checkbox-radio-base-icon-border-radius);

            z-index: -1;

            transition: border-color var(--checkbox-radio-base-icon-transition-duration-border) ease-out,
                background-color var(--checkbox-radio-base-icon-transition-duration-bg) ease-out;
        }

    .checkbox-radio-base_checked .checkbox-radio-base__icon:before {
        background-color: var(--clr-el-yellow-100);
        border-width: 0;
    }

    .checkbox-radio-base:hover.checkbox-radio-base:not(.checkbox-radio-base_checked) .checkbox-radio-base__icon:before {
        border-color: var(--clr-el-gray-040);
    }

    .checkbox-radio-base:hover.checkbox-radio-base:is(.checkbox-radio-base_checked):not(.checkbox-radio-base_disabled) .checkbox-radio-base__icon:before {
        background-color: var(--checkbox-radio-base-icon-checked-bg-hover);
    }

    .checkbox-radio-base_disabled .checkbox-radio-base__icon {
        color: var(--clr-el-gray-040);
    }

    .checkbox-radio-base_disabled .checkbox-radio-base__icon:before {
        background-color: var(--clr-el-gray-020);
    }

    .checkbox-radio-base__tick {
        display: flex;
        align-items: center;
        justify-content: center;

        width: var(--checkbox-radio-base-tick-size);
        height: var(--checkbox-radio-base-tick-size);

        opacity: 0;
        transform: var(--checkbox-radio-base-transform-check);
        transition: transform 0.2s;
    }

    .checkbox-radio-base_checked .checkbox-radio-base__tick {
        opacity: 1;
        transform: none;
    }

    .checkbox-radio-base__label {
        margin-left: var(--space-8);
        flex: 1;
    }
.multi-story {
    font-size: 16px;
}

    .multi-story__group {
        margin-bottom: 24px;
    }

    .multi-story__group-title {
        font-weight: 700;
        margin-bottom: 12px;
        white-space: pre;
    }

    .multi-story__group-items {
        display: flex;
    }

    .multi-story__item {
        margin-right: 32px;
    }

    .multi-story__item-title {
        margin-bottom: 8px;
    }

<div class=\\"multi-story\\"><div class=\\"multi-story__group\\"><div class=\\"multi-story__group-items\\"><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s8</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s8 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"6\\" fill=\\"none\\" height=\\"5\\" viewBox=\\"0 0 6 5\\"><path d=\\"M1 2L2.5 3.5L5 1\\" stroke=\\"currentColor\\" stroke-width=\\"1.7\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s12</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s12 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"8\\" fill=\\"none\\" height=\\"6\\" viewBox=\\"0 0 8 6\\"><path d=\\"M1.25 2.75L3.25 4.75L6.75 1.25\\" stroke=\\"currentColor\\" stroke-width=\\"1.7\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s16</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s16 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"10\\" fill=\\"none\\" height=\\"8\\" viewBox=\\"0 0 10 8\\"><path d=\\"M1.5 3.75L4 6.25L8.5 1.75\\" stroke=\\"currentColor\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s20</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s20 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"12\\" fill=\\"currentColor\\" height=\\"9\\" viewBox=\\"0 0 12 9\\"><path d=\\"M4.61542 6.39099L1.55542 3.08599C1.39357 2.91216 1.16956 2.80935 0.932223 2.79998C0.694888 2.79062 0.463473 2.87545 0.288423 3.03599C0.202076 3.11519 0.132216 3.21065 0.0828515 3.31691C0.0334866 3.42317 0.00558826 3.53813 0.000756993 3.65519C-0.00407428 3.77226 0.0142566 3.88912 0.054698 3.99909C0.0951395 4.10905 0.156895 4.20995 0.236423 4.29599L4.59142 8.99999L11.7524 1.50699C11.8333 1.42237 11.8967 1.32261 11.939 1.21343C11.9813 1.10426 12.0017 0.987812 11.9989 0.870766C11.9961 0.753719 11.9702 0.638372 11.9228 0.531334C11.8754 0.424296 11.8073 0.327669 11.7224 0.246991C11.55 0.0830431 11.3196 -0.00586022 11.0817 -0.000236868C10.8439 0.00538648 10.6179 0.105078 10.4534 0.276991L4.61542 6.39099Z\\" fill=\\"currentColor\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div><div class=\\"multi-story__item\\"><div class=\\"multi-story__item-title\\">size: s24</div><div class=\\"multi-story__item-component\\"><label class=\\"checkbox-radio-base checkbox-radio-base_size_s24 checkbox-radio-base_checked checkbox-radio-base_shape_rectangle\\"><input type=\\"checkbox\\" checked=\\"\\" class=\\"checkbox-radio-base__input\\"/><div class=\\"checkbox-radio-base__icon\\"><div class=\\"checkbox-radio-base__tick\\"><svg width=\\"12\\" fill=\\"currentColor\\" height=\\"9\\" viewBox=\\"0 0 12 9\\"><path d=\\"M4.61542 6.39099L1.55542 3.08599C1.39357 2.91216 1.16956 2.80935 0.932223 2.79998C0.694888 2.79062 0.463473 2.87545 0.288423 3.03599C0.202076 3.11519 0.132216 3.21065 0.0828515 3.31691C0.0334866 3.42317 0.00558826 3.53813 0.000756993 3.65519C-0.00407428 3.77226 0.0142566 3.88912 0.054698 3.99909C0.0951395 4.10905 0.156895 4.20995 0.236423 4.29599L4.59142 8.99999L11.7524 1.50699C11.8333 1.42237 11.8967 1.32261 11.939 1.21343C11.9813 1.10426 12.0017 0.987812 11.9989 0.870766C11.9961 0.753719 11.9702 0.638372 11.9228 0.531334C11.8754 0.424296 11.8073 0.327669 11.7224 0.246991C11.55 0.0830431 11.3196 -0.00586022 11.0817 -0.000236868C10.8439 0.00538648 10.6179 0.105078 10.4534 0.276991L4.61542 6.39099Z\\" fill=\\"currentColor\\"></path></svg></div></div><span class=\\"checkbox-radio-base__label\\">Checkbox</span></label></div></div></div></div></div>"
`;
